[package]
name = "headless_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64-stream = "4.0.0"
fantoccini = { version = "0.21.0", default-features = false, features = ["rustls-tls"] }
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
webdriver = "0.50.0"
