[package]
name = "thirthyfour_pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64-stream = "4.0.0"
serde = "1.0.204"
serde_json = "1.0.120"
thirtyfour = "0.33.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
webdriver = "0.50.0"


[patch.crates-io]
thrityfour = { path = "https://github.com/alexandru0-dev/thirtyfour", branch = "dev", package = "thirtyfour"}
